[package]
name = "tiny-cup-ref"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Referee Node for Tiny Cup"
homepage = "https://github.com/N8BWert/tiny-cup-ref"
repository = "https://github.com/N8BWert/tiny-cup-ref"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncomm = "0.1.2"
